JBR-9933 WToolkitEndSessionShutdownTest: pass module options to the child JVM